final commit, fix height for different device to avoid overflow

--- a/src/Components/Dropdown.css
+++ b/src/Components/Dropdown.css
@@ -5,7 +5,7 @@
   border-radius: 5%;
   box-shadow: 1px 1px 10px;
   width: 22vw;
-  height: 45vh;
+  height: auto;
   margin-left: 150px;
   display: flex;
   flex-direction: column;
